@@ -42,10 +42,8 @@ import org.trade.core.validator.DecimalValidator;
 import org.trade.core.validator.IExceptionMessageListener;
 import org.trade.core.validator.IValidator;
 
-import java.io.Serial;
 import java.math.BigInteger;
 import java.util.Comparator;
-import java.util.Objects;
 
 /**
  *
@@ -54,7 +52,6 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
     /**
      *
      */
-    @Serial
     private static final long serialVersionUID = 4937298768811778585L;
 
     public final static String QUANTITY_POSITIVE_7_0 = "#(,)###(,)###";
@@ -67,7 +64,7 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
 
     public final static Quantity ZERO = new Quantity(0);
 
-    protected static Boolean m_ascending = true;
+    protected static Boolean m_ascending = new Boolean(true);
 
     static {
         // Register the appropriate converters
@@ -97,14 +94,14 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
      * @param quantityString String
      */
     public Quantity(String quantityString) {
-        if ((null != quantityString) && (!quantityString.isEmpty())) {
+        if ((null != quantityString) && (quantityString.length() != 0)) {
             // This is necessary because Java will parse strings with multiple
             // dashes
             if (quantityString.indexOf("-") != quantityString.lastIndexOf("-")) {
                 m_invalidValue = quantityString;
             } else {
                 try {
-                    setInteger(Integer.valueOf(quantityString));
+                    setInteger(new Integer(quantityString));
                 } catch (NumberFormatException e) {
                     m_invalidValue = quantityString;
                 }
@@ -118,7 +115,7 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
      * @param d int
      */
     public Quantity(int d) {
-        setInteger(d);
+        setInteger(new Integer(d));
     }
 
     /**
@@ -167,13 +164,17 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
      * @return int
      */
     public int getMaxLength() {
+        int maxLength = 14;
 
-        return switch (getFormat()) {
-            case QUANTITY_NONNEGATIVE_8_0 -> 11;
-            case QUANTITY_POSITIVE_10_0 -> 13;
-            case QUANTITY_POSITIVE_7_0 -> 10;
-            default -> 14;
-        };
+        if (getFormat().equals(QUANTITY_NONNEGATIVE_8_0)) {
+            maxLength = 11;
+        } else if (getFormat().equals(QUANTITY_POSITIVE_10_0)) {
+            maxLength = 13;
+        } else if (getFormat().equals(QUANTITY_POSITIVE_7_0)) {
+            maxLength = 10;
+        }
+
+        return maxLength;
     }
 
     /**
@@ -201,10 +202,11 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
      * @return boolean
      */
     public boolean canBeNegative() {
+        boolean negative = false;
 
         // Currently all formats prohibit negative numbers.
 
-        return false;
+        return negative;
     }
 
     /**
@@ -215,7 +217,13 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
     public boolean isNegative() {
         assertDefined();
 
-        return m_value.compareTo(0) < 0;
+        boolean negative = false;
+
+        if (m_value.compareTo(new Integer(0)) < 0) {
+            negative = true;
+        }
+
+        return negative;
     }
 
     /**
@@ -224,8 +232,13 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
      * @return boolean
      */
     public boolean isEmpty() {
+        boolean empty = false;
 
-        return (null == m_value) || (null != m_invalidValue);
+        if ((null == m_value) || (null != m_invalidValue)) {
+            empty = true;
+        }
+
+        return empty;
     }
 
     /**
@@ -273,20 +286,25 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
     public String toString() {
         if (null != m_value) {
             return (m_value.toString());
-        } else return Objects.requireNonNullElse(m_invalidValue, "");
+        } else if (null != m_invalidValue) {
+            return m_invalidValue;
+        } else {
+            return "";
+        }
     }
 
     /**
      * Method setValue.
      *
      * @param value Object
+     * @throws ValueTypeException
      */
     public void setValue(Object value) throws ValueTypeException {
         if (value instanceof Quantity) {
             setInteger(((Quantity) value).m_value);
         } else {
             try {
-                setInteger(((Quantity) Objects.requireNonNull(JavaTypeTranslator.convert(Quantity.class, value))).getIntegerValue());
+                setInteger(((Quantity) JavaTypeTranslator.convert(Quantity.class, value)).getIntegerValue());
             } catch (Exception ex) {
                 throw new ValueTypeException(ex);
             }
@@ -418,11 +436,14 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
      * Overrides Cloneable
      *
      * @return Object
+     * @throws *
+     * @see
      */
 
     public Object clone() {
         try {
-            return super.clone();
+            Quantity other = (Quantity) super.clone();
+            return other;
         } catch (CloneNotSupportedException e) {
             // will never happen
             return null;
@@ -467,8 +488,9 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
             return true;
 
         if (objectToCompare instanceof Quantity) {
-            return CoreUtils.nullSafeComparator(((Quantity) objectToCompare).getBigIntegerValue(),
-                    this.getBigIntegerValue()) == 0;
+            if (CoreUtils.nullSafeComparator(((Quantity) objectToCompare).getBigIntegerValue(),
+                    this.getBigIntegerValue()) == 0)
+                return true;
         }
         return false;
     }
@@ -483,6 +505,9 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
      * @param value Integer
      */
     private void setInteger(Integer value) {
+        if (value == null) {
+            m_value = new Integer(0);
+        }
         m_value = value;
         // Clear any invalid values
         m_invalidValue = null;
@@ -496,7 +521,7 @@ public class Quantity extends ValueType implements Comparator<Quantity>, Compara
      */
     private Integer notNull(Quantity value) {
         if (null == value) {
-            return (0);
+            return (new Integer(0));
         } else {
             return (value.getIntegerValue());
         }
