@@ -40,7 +40,6 @@ import org.trade.core.valuetype.Money;
 import javax.swing.*;
 import javax.swing.text.DefaultFormatterFactory;
 import javax.swing.text.NumberFormatter;
-import java.io.Serial;
 import java.text.NumberFormat;
 
 /**
@@ -51,7 +50,6 @@ public class MoneyField extends JFormattedTextField {
     /**
      *
      */
-    @Serial
     private static final long serialVersionUID = -4264304378113205235L;
 
     public MoneyField() {
@@ -62,7 +60,7 @@ public class MoneyField extends JFormattedTextField {
         this.setFormatterFactory(new DefaultFormatterFactory(new NumberFormatter(displayFormat),
                 new NumberFormatter(displayFormat), new NumberFormatter(editFormat)));
         this.setHorizontalAlignment(SwingConstants.RIGHT);
-        this.setValue(0);
+        this.setValue(new Double(0));
         this.setColumns(10);
     }
 
@@ -73,7 +71,7 @@ public class MoneyField extends JFormattedTextField {
      */
     public Money getMoney() {
         try {
-            this.setValue(Double.valueOf(this.getText()));
+            this.setValue(new Double(this.getText()));
         } catch (Exception ex) {
             // Do nothing will return the current value.
         }
