@@ -40,7 +40,6 @@ import org.trade.core.valuetype.Quantity;
 import javax.swing.*;
 import javax.swing.text.DefaultFormatterFactory;
 import javax.swing.text.NumberFormatter;
-import java.io.Serial;
 import java.text.NumberFormat;
 
 /**
@@ -51,7 +50,6 @@ public class QuantityField extends JFormattedTextField {
     /**
      *
      */
-    @Serial
     private static final long serialVersionUID = 3445299380677561974L;
 
     public QuantityField() {
@@ -63,7 +61,7 @@ public class QuantityField extends JFormattedTextField {
         this.setFormatterFactory(new DefaultFormatterFactory(new NumberFormatter(displayFormat),
                 new NumberFormatter(displayFormat), new NumberFormatter(editFormat)));
         this.setHorizontalAlignment(SwingConstants.RIGHT);
-        this.setValue(0);
+        this.setValue(new Integer(0));
         this.setColumns(10);
     }
 
@@ -74,7 +72,7 @@ public class QuantityField extends JFormattedTextField {
      */
     public Quantity getQuantity() {
         try {
-            this.setValue(Integer.valueOf(this.getText()));
+            this.setValue(new Integer(this.getText()));
         } catch (Exception ex) {
             // Do nothing will return the current value.
         }
